# BigBrain

./: CMakeLists.txt  app.qrc  qml.qrc  qtquickcontrols2.conf
js_files/: color_tile.js  image_for_page_games.js
lib/: CMakeLists.txt
lib/Game2048/: CMakeLists.txt
lib/Game2048/includes/: datatype2048.hpp  modelgame2048.hpp
lib/Game2048/srcs/: modelgame2048.cpp
qml/: main.qml
qml/MenuBarCustom/: MenuBarImpl.qml  qmldir
qml/ModuleDialog/: DialogImpl.qml  qmldir
qml/ModuleStyle/: Style.qml  qmldir
qml/PageGames/: PageGamesImpl.qml  qmldir
qml/PageGames/Games/: qmldir
qml/PageGames/Games/Game2048/: Game2048Impl.qml  qmldir
qml/PageGames/Games/Game2048/ScoreDisplay/: ScoreDisplayImpl.qml  qmldir
qml/PageGames/Games/QuickMath/: GameQuickMathImpl.qml  qmldir
qml/PageMain/: PageMainImpl.qml  qmldir
qml/PageMain/ButtonRound/: ButtonRoundImpl.qml  qmldir
qml/PageMain/ModuleRowRound/: ModuleRowRoundImpl.qml  qmldir
qml/PageSettings/: PageSettingsImpl.qml  qmldir
qml/PageShop/: PageShopImpl.qml  qmldir
srcs/: main.cpp
tests/: CMakeLists.txt
tests/test_game2048/: CMakeLists.txt
tests/test_game2048/includes/: testgame2048.hpp
tests/test_game2048/srcs/: testgame2048.cpp
